--- a/styles/index.css
+++ b/styles/index.css
@@ -1,32 +1,53 @@
 .screen {
     background-color: #370617;
     height: 100vh;
-    width: 100%;
+    width: 1152px;
     display: flex;
     flex-wrap:wrap;
-    justify-content: space-around;
-    align-content: space-around;
+    justify-content: center;
+    align-content: center;
 }
 
 .container {
     background-color: #F48C06;
     border-radius: 6px;
     position: relative;
+    margin: 20px;
     width: 468px;
     height: 160px;
     padding: 20px; 
     display: flex;
-    justify-content: space-between;
+    align-items: flex-start;
+    justify-content: space-around;
 }
 
 .card {
     background-color:#9D0208;
-    border: 3px white solid;
     min-width: 78px;
     min-height: 78px;
     width: 100%;
+    border-radius: 4px;
+    margin: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-basis: 100px;
+    flex-basis: 78px;
 }
+
+.container__elem1 {
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+
+.container__elem2 {
+    justify-content: center; 
+    align-items: stretch;
+}
+
+.container__elem3 {
+    align-items: center;
+    justify-content: flex-end;
+}
+
+/*I'm not getting how to structure the tree for the 
+  boxes where the squares line up differently*/
