--- a/styles/index.css
+++ b/styles/index.css
@@ -49,13 +49,10 @@
     justify-content: flex-end;
 }
 
-/*I'm not getting how to structure the tree for the 
-<<<<<<< Updated upstream
-  boxes where the squares line up differently*/
-=======
-<<<<<<< HEAD
-  boxes where the squares line up differently*/
-=======
-  boxes where the squares line up differently*/
->>>>>>> master
->>>>>>> Stashed changes
+/*I just don't get how to realign the red squares in the last 
+3 boxes. something about my classes/BEM structure i think*/
+
+.container__elem4 {
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
